2005-06-13  Chris Taylor  <chris@icculus.org>

	* main/gamemine.c: convert_d1_tmap_num now returns 193 for texture
	number 198 to maintain bijectivity, when descent.pig is available
	(used to return 167, which is also returned for Descent 1 texture
	132)

2005-04-05  Bradley Bell  <btb@icculus.org>

	* arch/linux/joystick.c, arch/sdl/joy.c, main/kconfig.c: fix some
	bugs in joystick initialization

2005-04-04  Bradley Bell  <btb@icculus.org>

	* main/kconfig.c: cosmetic fixes to joystick config screen

	* arch/dos/joyc.c, arch/include/joy.h, arch/linux/joydefs.c,
	arch/linux/joystick.c, arch/linux/include/joystick.h,
	arch/sdl/joy.c, arch/win32/joyhh.c, arch/win32/include/joy.h,
	main/kconfig.c, unused/bios/joyc.c, unused/win95/joyc.c: change
	MAX_BUTTONS to JOY_MAX_BUTTONS

	* arch/sdl/joy.c, main/kconfig.c: don't use hardcoded descriptions
	of joystick buttons/axes

	* arch/win32/midi.c: don't play midi if -nosound

	* arch/win32/mingw_init.c: remove redundant joy_init()

2005-04-01  Chris Taylor  <chris@icculus.org>

	* main/game.c, main/editor/kdefs.h, main/editor/kfuncs.c,
	main/editor/med.c: "Go to Main Menu" now works in editor

	* main/editor/segment.c: set Highest_vertex_index and
	Highest_segment_index to 0 when creating a new mine (avoids
	problems with saving when another level was previously loaded)

2005-03-31  Chris Taylor  <chris@icculus.org>

	* main/bm.c, main/bm.h, main/bmread.c, main/editor/editor.h,
	main/editor/eglobal.c, main/editor/eobject.c,
	main/editor/medrobot.c, main/editor/objpage.c,
	main/editor/objpage.h: remove ObjType, ObjId, ObjStrength and
	OL_ constants; use "object" instead of "robot" in some places;
	draw and place reactors with correct modelnum

	* main/editor/texpage.c: no using TmapList, initialise texture
	category globals, no CurrentTmap (just use CurrentTexture)

2005-03-29  Bradley Bell  <btb@icculus.org>

	* mem/mem.c: remove obsolete malloc.h

2005-03-20  Bradley Bell  <btb@icculus.org>
