@@ -5,6 +5,9 @@
 	(used to return 167, which is also returned for Descent 1 texture
 	132)
 
+	* include/physfsx.h: added PHYSFSX_writeVector,
+	PHYSFSX_writeAngleVec and PHYSFSX_writeMatrix
+
 2005-04-05  Bradley Bell  <btb@icculus.org>
 
 	* arch/linux/joystick.c, arch/sdl/joy.c, main/kconfig.c: fix some
